restapi-k8s/restapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi-deployment
  labels:
    app: restapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: restapi
  template:
    metadata:
      labels:
        app: restapi
    spec:
      containers:
      - name: restapi
        image: restapi:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
