restapi-k8s/restapi-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: restapi-service
spec:
  selector:
    app: restapi
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8080
