restapi-k8s/restapi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: restapi-ing
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/books
        backend:
          serviceName: restapi-service
          servicePort: 8081
